# ocaml-mcp

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  TODO.md  dune-project  mcp-eio.opam  mcp.opam  ocaml-mcp-server.opam
.github/workflows/: build-test-install.yml
examples/: README.md  dune
examples/async-weather-server/: async_weather_server.ml  dune
examples/weather-server/: dune  weather_server.ml
lib/mcp/: dune  mcp.ml  mcp.mli  mcp_client.ml  mcp_client.mli  mcp_meta.ml  mcp_meta.mli  mcp_notification.ml  mcp_notification.mli  mcp_protocol.ml  mcp_protocol.mli  mcp_request.ml  mcp_request.mli  mcp_server.ml  mcp_server.mli  mcp_types.ml  mcp_types.mli
lib/mcp-eio/: connection.ml  connection.mli  dune  framing.ml  framing.mli  logging.ml  logging.mli  mcp_eio.ml  mcp_eio.mli  transport.mli  transport_http.ml  transport_http.mli  transport_memory.ml  transport_memory.mli  transport_socket.ml  transport_socket.mli  transport_stdio.ml  transport_stdio.mli
lib/mcp-sdk/: common.ml  dune  json_schema.ml  mcp_sdk.ml  mcp_sdk.mli  server.ml
lib/mcp-sdk-eio/: dune  mcp_sdk_eio.ml  mcp_sdk_eio.mli
lib/ocaml-mcp-server/: context.ml  context.mli  dune  dune_rpc_client.ml  dune_rpc_client.mli  merlin_client.ml  merlin_client.mli  ocaml_analysis.ml  ocaml_analysis.mli  ocaml_mcp_server.ml  ocaml_mcp_server.mli  ocamlformat_client.ml  ocamlformat_client.mli  tool_adapter.ml  tools.ml  tools.mli
lib/ocaml-mcp-server/tools/: build_status.ml  build_target.ml  eval.ml  find_definition.ml  find_references.ml  fs_edit.ml  fs_read.ml  fs_write.ml  module_signature.ml  ocaml_platform_actions.ml  project_structure.ml  run_tests.ml  tool_build_status.ml  tool_build_target.ml  tool_eval.ml  tool_find_definition.ml  tool_find_references.ml  tool_fs_edit.ml  tool_fs_read.ml  tool_fs_write.ml  tool_module_signature.ml  tool_project_structure.ml  tool_run_tests.ml  tool_type_at_pos.ml  type_at_pos.ml
test/: dune
test/build-status.t/: run.t
test/build-target.t/: run.t
test/build-target.t/test_project/lib/: mylib.ml
test/cram/build-status.t/: run.t
test/cram/build-target.t/: run.t
test/cram/build-target.t/test_project/test/: test_mylib.ml
test/cram/cancel.t/: run.t
test/cram/eval.t/: run.t
test/cram/fs-tools.t/: run.t
test/cram/http.t/: run.t
test/cram/meta.t/: run.t
test/cram/project-structure.t/: run.t
test/cram/project-structure.t/test_project/lib/: mylib.ml
test/cram/stdio.t/: run.t
test/cram/tools.t/: run.t
test/dune-rpc.t/: run.t
test/eval.t/: run.t
test/fs-tools.t/: dune  run.t
test/http.t/: run.t
test/meta.t/: run.t
test/project-structure.t/: run.t
test/project-structure.t/test_project/: dune-project
test/project-structure.t/test_project/lib/: dune
test/project-structure.t/test_project/test/: dune  test_mylib.ml
test/stdio.t/: run.t
test/tools.t/: run.t
test/unit/: dune  test_mcp.ml
