(include_subdirs unqualified)

(library
 (public_name ocaml-mcp-server)
 (name ocaml_mcp_server)
 (flags (:standard -linkall))
 (libraries
  mcp
  mcp-eio
  mcp.sdk
  eio
  eio.unix
  csexp
  yojson
  dune-rpc
  unix
  logs
  logs.fmt
  merlin-lib.kernel
  merlin-lib.query_protocol
  merlin-lib.query_commands
  merlin-lib.analysis
  compiler-libs.common
  compiler-libs.toplevel
  ocamlformat-lib)
 (preprocess
  (pps ppx_deriving_yojson)))
